@@ -31,7 +31,7 @@ import net.william278.mapdataapi.MapData;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.World;
-import org.bukkit.block.ShulkerBox;
+import org.bukkit.block.Container;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.BlockStateMeta;
@@ -96,7 +96,7 @@ public interface BukkitMapPersister {
             }
             if (item.getType() == Material.FILLED_MAP && item.hasItemMeta()) {
                 items[i] = function.apply(item);
-            } else if (item.getItemMeta() instanceof BlockStateMeta b && b.getBlockState() instanceof ShulkerBox box) {
+            } else if (item.getItemMeta() instanceof BlockStateMeta b && b.getBlockState() instanceof Container box) {
                 forEachMap(box.getInventory().getContents(), function);
                 b.setBlockState(box);
             }
@@ -276,7 +276,7 @@ public interface BukkitMapPersister {
 
     @NotNull
     private static World getDefaultMapWorld() {
-        final World world = Bukkit.getWorlds().get(0);
+        final World world = Bukkit.getWorlds().getFirst();
         if (world == null) {
             throw new IllegalStateException("No worlds are loaded on the server!");
         }
@@ -308,7 +308,7 @@ public interface BukkitMapPersister {
             // We set the pixels in this order to avoid the map being rendered upside down
             for (int i = 0; i < 128; i++) {
                 for (int j = 0; j < 128; j++) {
-                    canvas.setPixel(j, i, (byte) canvasData.getColorAt(i, j));
+                    canvas.setPixelColor(j, i, canvasData.getMapColorAt(i, j));
                 }
             }
 
@@ -383,18 +383,38 @@ public interface BukkitMapPersister {
         }
 
         @Override
+        @Deprecated
         public void setPixel(int x, int y, byte color) {
             pixels[x][y] = color;
         }
 
         @Override
+        @Deprecated
         public byte getPixel(int x, int y) {
             return (byte) pixels[x][y];
         }
 
         @Override
+        @Deprecated
         public byte getBasePixel(int x, int y) {
             return getPixel(x, y);
+        }
+
+        @Override
+        public void setPixelColor(int i, int i1, @Nullable Color color) {
+            pixels[i][i1] = color == null ? 0 : color.getRGB();
+        }
+
+        @Nullable
+        @Override
+        public Color getPixelColor(int x, int y) {
+            return getBasePixelColor(x, y);
+        }
+
+        @NotNull
+        @Override
+        public Color getBasePixelColor(int x, int y) {
+            return new Color(pixels[x][y]);
         }
 
         @Override
@@ -424,23 +444,20 @@ public interface BukkitMapPersister {
         @NotNull
         private MapData extractMapData() {
             final List<MapBanner> banners = Lists.newArrayList();
-            try {
-                final String BANNER_PREFIX = "banner_";
-                for (int i = 0; i < getCursors().size(); i++) {
-                    final MapCursor cursor = getCursors().getCursor(i);
-                    final String type = cursor.getType().name().toLowerCase(Locale.ENGLISH);
-                    if (type.startsWith(BANNER_PREFIX)) {
-                        banners.add(new MapBanner(
-                                type.replaceAll(BANNER_PREFIX, ""),
-                                cursor.getCaption() == null ? "" : cursor.getCaption(),
-                                cursor.getX(),
-                                mapView.getWorld() != null ? mapView.getWorld().getSeaLevel() : 128,
-                                cursor.getY()
-                        ));
-                    }
-
+            final String BANNER_PREFIX = "banner_";
+            for (int i = 0; i < getCursors().size(); i++) {
+                final MapCursor cursor = getCursors().getCursor(i);
+                final String type = cursor.getType().getKey().getKey();
+                if (type.startsWith(BANNER_PREFIX)) {
+                    banners.add(new MapBanner(
+                            type.replaceAll(BANNER_PREFIX, ""),
+                            cursor.getCaption() == null ? "" : cursor.getCaption(),
+                            cursor.getX(),
+                            mapView.getWorld() != null ? mapView.getWorld().getSeaLevel() : 128,
+                            cursor.getY()
+                    ));
                 }
-            } catch (Throwable ignored) {
+
             }
             return MapData.fromPixels(pixels, getDimension(), (byte) 2, banners, List.of());
         }
